--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homapage": "https://bhaveshvaru.github.io/stockList",
   "name": "stocklist",
   "version": "0.1.0",
   "private": true,
@@ -13,8 +14,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^3.0.0",
@@ -22,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
